# MediaCodecDemo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/yong/mediacodecdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidMediaCodec.cpp  AndroidMediaCodec.h  CMediaCodec.cpp  CMediaCodec.h  JniHandler.cpp  JniHandler.h  media_player_test.cpp  media_player_test.h
app/src/main/cpp/j4a/: j4a_allclasses.include.h  j4a_allclasses.loader.h  j4a_base.c
app/src/main/cpp/media/: MediaCodec.c
app/src/main/cpp/media/include/: MediaCodec.h
app/src/main/java/yong/mediacodecdemo/: FileTool.java  MainActivity.java  MediaCodecBase.java  MediaCodecCpp.java  PlayerView.java
app/src/main/java/yong/mediacodecdemo/IvideoCallBack/: IvideoSizeCallBack.java  IvideoStatusCallBack.java
app/src/main/java/yong/mediacodecdemo/MediaCodecASync/: MediaCodecASync.java
app/src/main/java/yong/mediacodecdemo/MediaCodecSync/: MediaCodecSync.java  MediaCodecSyncTest.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/yong/mediacodecdemo/: ExampleUnitTest.java
